--- a/html/pfappserver/root/static.alt/package.json
+++ b/html/pfappserver/root/static.alt/package.json
@@ -7,10 +7,12 @@
     "build": "vue-cli-service build",
     "build-debug": "env VUE_APP_DEBUG=true vue-cli-service build",
     "build-report": "vue-cli-service build --report",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test:unit": "jest --clearCache && vue-cli-service test:unit"
   },
   "dependencies": {
     "@babel/core": "^7.9.0",
+    "@vue/test-utils": "^1.0.3",
     "axios": "0.19.2",
     "bootstrap": "4.4.1",
     "bootstrap-vue": "2.13.1",
@@ -42,11 +44,15 @@
   },
   "devDependencies": {
     "@babel/polyfill": "^7.8.7",
+    "@vue/cli": "^4.4.4",
     "@vue/cli-plugin-babel": "^4.3.1",
     "@vue/cli-plugin-eslint": "^4.3.1",
+    "@vue/cli-plugin-unit-jest": "^4.4.4",
     "@vue/cli-service": "^4.3.1",
     "@vue/eslint-config-standard": "^5.0.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.0.1",
     "eslint": "6.8.0",
     "eslint-plugin-vue": "6.2.2",
     "node-sass": "^4.13.1",
@@ -56,6 +62,7 @@
     "svg-arc-to-cubic-bezier": "^3.2.0",
     "vue-cli-plugin-bootstrap-vue": "0.6.0",
     "vue-cli-plugin-i18n": "^0.6.1",
+    "vue-jest": "^3.0.5",
     "vue-template-compiler": "2.6.11"
   },
   "postcss": {
