--- a/t/venom/vars/all.yml
+++ b/t/venom/vars/all.yml
@@ -72,3 +72,53 @@ dot1x_eap_peap.profiles.wired.id: catch_dot1x_wired_eap_peap_mschapv2
 dot1x_eap_peap.profiles.wired.description: 802.1X wired EAP-PEAP-MSCHAPv2
 dot1x_eap_peap.profiles.wired.filters.connection_type: Ethernet-EAP
 dot1x_eap_peap.profiles.wired.filters.connection_sub_type: MS-EAP-Authentication
+
+###############################################################################
+# Scan WMI variables
+################################################################################
+# Security Event
+scan_wmi.security_event.access_duration:
+scan_wmi.security_event.delay_by.interval:
+scan_wmi.security_event.delay_by.unit:
+scan_wmi.security_event.description:
+scan_wmi.security_event.grace.interval:
+scan_wmi.security_event.grace.unit:
+scan_wmi.security_event.trigger.custom:
+
+# WMI Rule
+scan_wmi.wmi_rule.action:
+scan_wmi.wmi_rule.id:
+scan_wmi.wmi_rule.namespace:
+scan_wmi.wmi_rule.request:
+
+# Scan Engine
+scan_wmi.scan_engine.domain:
+scan_wmi.scan_engine.duration.interval:
+scan_wmi.scan_engine.duration.unit:
+scan_wmi.scan_engine.id:
+scan_wmi.scan_engine.password:
+scan_wmi.wmi_rule.id:
+scan_wmi.scan_engine.username:
+
+# Connection Profil
+scan_wmi.connection_profil:
+scan_wmi.connection_profil.access_registration_when_registered:
+scan_wmi.connection_profil.advanced_filter:
+scan_wmi.connection_profil.always_use_redirecturl:
+scan_wmi.connection_profil.autoregister:
+scan_wmi.connection_profil.billing_tiers:
+scan_wmi.connection_profil.interval:
+scan_wmi.connection_profil.unit:
+scan_wmi.connection_profil.default_psk_key:
+scan_wmi.connection_profil.description:
+scan_wmi.connection_profil.dot1x_recompute_role_from_portal:
+scan_wmi.connection_profil.dot1x_unset_on_unmatch:
+scan_wmi.connection_profil.dpsk:
+scan_wmi.connection_profil.match:
+scan_wmi.connection_profil.type:
+scan_wmi.connection_profil.filter_match_style:
+scan_wmi.connection_profil.id:
+scan_wmi.connection_profil.locale:
+scan_wmi.connection_profil.login_attempt_limit:
+scan_wmi.connection_profil.mac_auth_recompute_role_from_portal:
+scan_wmi.connection_profil.network_logoff:
