--- a/html/pfappserver/root/static.alt/package.json
+++ b/html/pfappserver/root/static.alt/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "build-debug": "env VUE_APP_DEBUG=true vue-cli-service build --mode development",
-    "build-report": "vue-cli-service build --report",
+    "test:unit": "jest --clearCache && vue-cli-service test:unit",
     "lint": "vue-cli-service lint --report-unused-disable-directives",
-    "test:unit": "jest --clearCache && vue-cli-service test:unit"
+    "build-debug": "env VUE_APP_DEBUG=true vue-cli-service build --mode development",
+    "build-report": "vue-cli-service build --report"
   },
   "dependencies": {
     "@babel/core": "^7.9.0",
@@ -26,7 +26,7 @@
     "typeface-b612-mono": "0.0.75",
     "uuid": "^3.4.0",
     "vendor": "^1.7.0",
-    "vue": "2.6.11",
+    "vue": "^3.0.0-beta.1",
     "vue-awesome": "^3.5.4",
     "vue-browser-acl": "^0.13.5",
     "vue-flatpickr-component": "8.1.5",
@@ -40,7 +40,7 @@
     "vue2vis": "0.0.18",
     "vuedraggable": "2.23.2",
     "vuelidate": "0.7.5",
-    "vuex": "3.2.0"
+    "vuex": "^4.0.0-alpha.1"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.8.7",
@@ -49,13 +49,14 @@
     "@vue/cli-plugin-eslint": "^4.3.1",
     "@vue/cli-plugin-unit-jest": "^4.4.4",
     "@vue/cli-service": "^4.3.1",
+    "@vue/compiler-sfc": "^3.0.0-beta.1",
     "@vue/eslint-config-standard": "^5.0.0",
-    "@vue/test-utils": "^1.0.3",
+    "@vue/test-utils": "^2.0.0-alpha.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.0.1",
     "eslint": "6.8.0",
-    "eslint-plugin-vue": "6.2.2",
+    "eslint-plugin-vue": "^7.0.0-alpha.0",
     "node-sass": "^4.13.1",
     "sass-loader": "^7.3.1",
     "stylelint": "^13.3.3",
@@ -63,8 +64,8 @@
     "svg-arc-to-cubic-bezier": "^3.2.0",
     "vue-cli-plugin-bootstrap-vue": "0.6.0",
     "vue-cli-plugin-i18n": "^0.6.1",
-    "vue-jest": "^3.0.5",
-    "vue-template-compiler": "2.6.11"
+    "vue-cli-plugin-vue-next": "~0.1.3",
+    "vue-jest": "^3.0.5"
   },
   "postcss": {
     "plugins": {
