--- a/html/pfappserver/root/static.alt/package.json
+++ b/html/pfappserver/root/static.alt/package.json
@@ -29,6 +29,7 @@
     "vue-awesome": "^3.5.4",
     "vue-browser-acl": "^0.13.5",
     "vue-flatpickr-component": "8.1.5",
+    "vue-fragment": "^1.5.1",
     "vue-i18n": "8.17.3",
     "vue-multiselect": "2.1.6",
     "vue-router": "3.1.6",
